--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,9 @@
 
-name: Create airports.json
+name: Update airports.json
 on:
-  push:
-    branches: ['master','main']
+  schedule:
+    # schedule 1st of every month
+    - cron: '0 0 1 * *'
 jobs:
   build:
     runs-on: ubuntu-latest
