--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build":"node index.js",
+    "build": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +19,6 @@
   },
   "homepage": "https://github.com/WPPress/airports#readme",
   "dependencies": {
+    "country-code-lookup": "^0.0.22"
   }
 }
